--- a/templates/home.html
+++ b/templates/home.html
@@ -188,7 +188,7 @@ body.dark-mode .card-product-grid {
 <!-- ========================= FULL-WIDTH VIDEO BANNER ========================= -->
 <div class="full-width-video">
   <video autoplay muted loop>
-    <source src="{% static 'videos/clothing.mp4' %}" type="video/mp4">
+    <source src="{% static 'videos/Juru Collection.mp4' %}" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <div class="video-overlay">
