--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -194,7 +194,6 @@
         <ul class="list-unstyled small">
           <li><a href="{% url 'about'%}" class="text-white-50">About JURU</a></li>
           <li><a href="https://whatsapp.com/channel/0029Vb68qLWFHWq6VIuTpZ0w" class="text-white-50">Careers</a></li>
-          <li><a href="{% url 'corporate_responsibility' %}" class="text-white-50">Corporate Responsibility</a></li>
           <li><a href="https://whatsapp.com/channel/0029Vb68qLWFHWq6VIuTpZ0w" class="text-white-50">News Center</a></li>
         </ul>
       </div>
@@ -230,7 +229,7 @@
         </div>
         <div class="d-flex align-items-center mb-1">
             <i class="fas fa-phone me-2"></i>
-            <span class="small">+250 791 376 419</span>
+            <span class="small">+250798873759</span>
         </div>
         <div class="d-flex align-items-center mb-3">
             <i class="fas fa-map-marker-alt me-2"></i>
@@ -248,12 +247,7 @@
             <a href="https://www.instagram.com/juru_collection" target="_blank" class="text-danger">
                 <i class="fab fa-instagram fa-lg"></i>
             </a>
-            <a href="https://www.linkedin.com/" target="_blank" class="text-primary">
-                <i class="fab fa-linkedin fa-lg"></i>
-            </a>
-            <a href="#" target="_blank" class="text-primary">
-                <i class="fab fa-twitter fa-lg"></i>
-            </a>
+            
         </div>
     </div>
 
