--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -220,7 +220,7 @@
       <!-- Video + Promo Text on left -->
       <div class="video-wrapper">
         <video autoplay muted loop playsinline>
-          <source src="{% static 'videos/Juru Collection2.mp4' %}" type="video/mp4">
+          <source src="{% static 'videos/Juru4.mp4' %}" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
