--- a/templates/accounts/account_verification_email.html
+++ b/templates/accounts/account_verification_email.html
@@ -74,7 +74,7 @@
     <p>Welcome to <strong>Juru Collection</strong>! Please confirm your email address to activate your account and begin exploring authentic Rwandan fashion.</p>
 
     <div>
-      <a href="https://{{ domain }}{% url 'activate' uidb64=uid token=token %}" class="btn">Verify My Email</a>
+      <a href="http://{{ domain }}{% url 'activate' uidb64=uid token=token %}" class="btn">Verify My Email</a>
       
     </div>
 
