--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -93,9 +93,9 @@ body.dark-mode .add-to-cart-btn:hover {
 }
 
 body.dark-mode .review-submit-btn {
-    border: 2px solid #fff;
-    background-color: #fff;
-    color: #000;
+    border: 2px solid #fff!important;
+    background-color: #fff !important;
+    color: #000 !important;
 }
 
 body.dark-mode .review-submit-btn:hover {
